--- a/projects/awesome-widgets.html
+++ b/projects/awesome-widgets.html
@@ -85,7 +85,7 @@ sudo make install
 <h3><a href="#tips" class="anchor" id="tips"><span class="octicon octicon-link"></span></a>Tips & tricks</h3>
 <p>You may use different colors for labels. Just put label text into html code. See <a href="https://github.com/arcan1s/awesome-widgets/issues/9" title="GitHub">issue</a> for more details.</p>
 
-<p><i>KDE4:</i> Numbering of elements of temperature, HDD usage, HDD speed, HDD temperature refers to elements order from second tab (<i>Advanced settings</i>). You should select an item to the required listWidget first. And the first selected element in the listWidget will be <code>$tag0</code>. See <a href="https://github.com/arcan1s/awesome-widgets/issues/17" title="GitHub">issue</a> for more details.</p>
+<p><i><font color="#FF0000">KDE4</font></i> Numbering of elements of temperature, HDD usage, HDD speed, HDD temperature refers to elements order from second tab (<i>Advanced settings</i>). You should select an item to the required listWidget first. And the first selected element in the listWidget will be <code>$tag0</code>. See <a href="https://github.com/arcan1s/awesome-widgets/issues/17" title="GitHub">issue</a> for more details.</p>
 <!-- end of howto block -->
 
 <!-- config block -->
@@ -505,15 +505,15 @@ sudo make install
 
 <p><b>Temperature units:</b> Select units for temperature. Available units are Celsius, Farenheit, Kelvin, Reaumur, cm^-1, kJ/mol, kcal/mol.</p>
 
-<p><i>KDE4</i> <b>Temperature devices:</b> List of devices, which will be observed in temperature label (combo box items come from <code>sensors</code>). List widget is editable.</p>
+<p><i><font color="#FF0000">KDE4</font></i> <b>Temperature devices:</b> List of devices, which will be observed in temperature label (combo box items come from <code>sensors</code>). List widget is editable.</p>
 
-<p><i>KDE4</i> <b>Mount points:</b> List of mount points, which will be observed in HDD label (combo box items come from <code>mount</code>). List widget is editable.</p>
+<p><i><font color="#FF0000">KDE4</font></i> <b>Mount points:</b> List of mount points, which will be observed in HDD label (combo box items come from <code>mount</code>). List widget is editable.</p>
 
-<p><i>KDE4</i> <b>HDDs (speed):</b> List of hard disk devices, which will be observed in HDD speed label (combo box items come from DataEngine). List widget is editable.</p>
+<p><i><font color="#FF0000">KDE4</font></i> <b>HDDs (speed):</b> List of hard disk devices, which will be observed in HDD speed label (combo box items come from DataEngine). List widget is editable.</p>
 
-<p><i>KDE4</i> <b>HDDs (temperature):</b> List of hard disk devices, which will be observed in HDD temperature label (combo box items come from <code>find</code>). List widget is editable.</p>
+<p><i><font color="#FF0000">KDE4</font></i> <b>HDDs (temperature):</b> List of hard disk devices, which will be observed in HDD temperature label (combo box items come from <code>find</code>). List widget is editable.</p>
 
-<p><i>KDE4</i> <b>Network device:</b> Use specified device as active. This option will disable auto select network device.</p>
+<p><i><font color="#FF0000">KDE4</font></i> <b>Network device:</b> Use specified device as active. This option will disable auto select network device.</p>
 
 <p><b>AC online tag:</b> Line which will be shown when AC is online. Default is <code>(*)</code>.</p>
 
@@ -577,7 +577,7 @@ sudo make install
   </tr>
 </table>
 
-<p><i>KDE4 (see <a href="http://mail.kde.org/pipermail/plasma-devel/2015-February/039027.html" title="Mailing list">this thread</a>)</i> <b>Panel toggle:</b> Select panels which will be set hidden on hotkey.</p>
+<p><i><font color="#FF0000">KDE4</font> (see <a href="http://mail.kde.org/pipermail/plasma-devel/2015-February/039027.html" title="Mailing list">this thread</a>)</i> <b>Panel toggle:</b> Select panels which will be set hidden on hotkey.</p>
 <!-- end of config block -->
 
 <!-- gui block -->
