--- a/ru/projects/awesome-widgets.html
+++ b/ru/projects/awesome-widgets.html
@@ -86,7 +86,7 @@ sudo make install
 <h3><a href="#tips" class="anchor" id="tips"><span class="octicon octicon-link"></span></a>Tips & tricks</h3>
 <p>Вы можете использовать различные цвета в полях. Просто вставьте нужный текст в html код. Смотри <a href="https://github.com/arcan1s/awesome-widgets/issues/9" title="GitHub">вопрос</a> для более подробной информации.</p>
 
-<p><i>KDE4:</i> Нумерация элементов в полях температура, использование HDD, скорость HDD, температура HDD ссылается на порядок элементов во второй вкладке (<i>Расширенные настройки</i>). Вы должны сначала выделить требуемые элементы в нужном listWidget. И первый выделенный элемент в listWdiget будет связан c <code>$tag0</code>. Смотри <a href="https://github.com/arcan1s/awesome-widgets/issues/17" title="GitHub">вопрос</a> для более подробной информации.</p>
+<p><i><font color="#FF0000">KDE4</font></i> Нумерация элементов в полях температура, использование HDD, скорость HDD, температура HDD ссылается на порядок элементов во второй вкладке (<i>Расширенные настройки</i>). Вы должны сначала выделить требуемые элементы в нужном listWidget. И первый выделенный элемент в listWdiget будет связан c <code>$tag0</code>. Смотри <a href="https://github.com/arcan1s/awesome-widgets/issues/17" title="GitHub">вопрос</a> для более подробной информации.</p>
 <!-- end of howto block -->
 
 <!-- config block -->
@@ -324,7 +324,7 @@ sudo make install
     <td>Скорость отдачи активного устройства, KB/s, <code>----</code>.</td>
   </tr>
   <tr>
-    <td><code>$up</code></td>
+    <td><code>$upN</code></td>
     <td>Скорость отдачи устройства N, KB/s, <code>----</code>.</td>
   </tr>
   <tr>
@@ -506,15 +506,15 @@ sudo make install
 
 <p><b>Температурные единицы:</b> Выберете единицы температуры. Доступные единицы следующие: Цельсий, Фаренгейт и Кельвин.</p>
 
-<p><i>KDE4</i> <b>Датчики температуры:</b> Список датчиков, которые будут наблюдаться в соответствующем поле (содержимое комбо-бокса заполнятся из <code>sensors</code>). Содержимое виджета редактируемо.</p>
+<p><i><font color="#FF0000">KDE4</font></i> <b>Датчики температуры:</b> Список датчиков, которые будут наблюдаться в соответствующем поле (содержимое комбо-бокса заполнятся из <code>sensors</code>). Содержимое виджета редактируемо.</p>
 
-<p><i>KDE4</i> <b>Точки монтирования: </b> Список точек монтирования, которые будут наблюдаться в соответствующем поле (содержимое комбо-бокса заполнятся из <code>mount</code>). Содержимое виджета редактируемо.</p>
+<p><i><font color="#FF0000">KDE4</font></i> <b>Точки монтирования: </b> Список точек монтирования, которые будут наблюдаться в соответствующем поле (содержимое комбо-бокса заполнятся из <code>mount</code>). Содержимое виджета редактируемо.</p>
 
-<p><i>KDE4</i> <b>HDD (скорость):</b> Список HDD, скорость которых будет наблюдаться в соответствующем поле (содержимое комбо-бокса заполнятся из DataEngine). Содержимое виджета редактируемо.</p>
+<p><i><font color="#FF0000">KDE4</font></i> <b>HDD (скорость):</b> Список HDD, скорость которых будет наблюдаться в соответствующем поле (содержимое комбо-бокса заполнятся из DataEngine). Содержимое виджета редактируемо.</p>
 
-<p><i>KDE4</i> <b>HDD (температура):</b> Список HDD, температура которых будет наблюдаться в соответствующем поле (содержимое комбо-бокса заполнятся из <code>find</code>). Содержимое виджета редактируемо.</p>
+<p><i><font color="#FF0000">KDE4</font></i> <b>HDD (температура):</b> Список HDD, температура которых будет наблюдаться в соответствующем поле (содержимое комбо-бокса заполнятся из <code>find</code>). Содержимое виджета редактируемо.</p>
 
-<p><i>KDE4</i> <b>Сетевой интерфейс:</b> Использовать указанный интерфейс, как активный. Эта опция отключит автоматический выбор сетевого интерфейса.</p>
+<p><i><font color="#FF0000">KDE4</font></i> <b>Сетевой интерфейс:</b> Использовать указанный интерфейс, как активный. Эта опция отключит автоматический выбор сетевого интерфейса.</p>
 
 <p><b>AC online тег:</b> Строка, которая будет показана, когда AC онлайн. По умолчанию <code>(*)</code>.</p>
 
@@ -578,7 +578,7 @@ sudo make install
   </tr>
 </table>
 
-<p><i>KDE4 (смотри <a href="http://mail.kde.org/pipermail/plasma-devel/2015-February/039027.html" title="Mailing list">здесь</a>)</i> <b>Скрытие панелей:</b> Выберите панели, которые будут скрыты при нажатии на горячую клавишу.</p>
+<p><i><font color="#FF0000">KDE4</font> (смотри <a href="http://mail.kde.org/pipermail/plasma-devel/2015-February/039027.html" title="Mailing list">здесь</a>)</i> <b>Скрытие панелей:</b> Выберите панели, которые будут скрыты при нажатии на горячую клавишу.</p>
 <!-- end of config block -->
 
 <!-- gui block -->
