update main pages

--- a/ru/index.html
+++ b/ru/index.html
@@ -24,7 +24,7 @@ title: arcanis
           </span>
         </label>
         <p class="view"><a href="/ru/projects/" title="Проекты">Проекты</a><br>
-        <a href="ftp://repo.arcanis.name/repo" title="Репозиторий">Репозиторий</a><br>
+        <a href="http://repo.arcanis.name/" title="Репозиторий">Репозиторий</a><br>
         <p class="view"><a href="/ru/about" title="Обо мне">Обо мне</a></p>
 
         {% include cse.html %}
