update aw pages

--- a/ru/projects/awesome-widgets.html
+++ b/ru/projects/awesome-widgets.html
@@ -401,6 +401,19 @@ sudo make install
     <td><code>$tdesktops</code></td>
     <td>Общее число рабочих столов.</td>
   </tr>
+  <tr>
+    <th rowspan="3">Котировки</th>
+    <td><code>$askN</code></td>
+    <td>Получить аск по тикеру N. Например, <code>$ask0</code>.</td>
+  </tr>
+  <tr>
+    <td><code>$bidN</code></td>
+    <td>Получить бид по тикеру N. Например, <code>$bid0</code>.</td>
+  </tr>
+  <tr>
+    <td><code>$priceN</code></td>
+    <td>Получить среднее между бидом и аском по тикеру N. Например, <code>$price0</code>.</td>
+  </tr>
 </table>
 
 <h4><a href="#advanced" class="anchor" id="advanced"><span class="octicon octicon-link"></span></a>Расширенные настройки</h4>
