--- a/projects/awesome-widgets.html
+++ b/projects/awesome-widgets.html
@@ -400,6 +400,19 @@ sudo make install
     <td><code>$tdesktops</code></td>
     <td>Total number of desktops.</td>
   </tr>
+  <tr>
+    <th rowspan="3">Quotes</th>
+    <td><code>$askN</code></td>
+    <td>Get ask for ticker N. For example <code>$ask0</code>.</td>
+  </tr>
+  <tr>
+    <td><code>$bidN</code></td>
+    <td>Get bid for ticker N. For example <code>$bid0</code>.</td>
+  </tr>
+  <tr>
+    <td><code>$priceN</code></td>
+    <td>Get average between bid and ask for ticker N. For example <code>$price0</code>.</td>
+  </tr>
 </table>
 
 <h4><a href="#advanced" class="anchor" id="advanced"><span class="octicon octicon-link"></span></a>Advanced settings</h4>
