--- a/_posts/2014-12-19-aw-v21-bells-and-whistles.html
+++ b/_posts/2014-12-19-aw-v21-bells-and-whistles.html
@@ -4,7 +4,7 @@ type: paper
 hastr: true
 layout: paper
 tags: awesome-widgets, pytextmonitor
-title: Awesome Widgets 2.1 - bells and whistles
+title: Awesome Widgets - bells and whistles
 short: aw-v21-bells-and-whistles
 description: The paper deals with settings of a custom scripts and graphical bars in the new version of Awesome Widgets (2.1).
 ---
@@ -12,7 +12,7 @@ description: The paper deals with settings of a custom scripts and graphical bar
 <p>For a start it is highly recommended copy file <code>$HOME/.kde4/share/config/extsysmon.conf</code> after widget update before you open widget settings, because old and new script settings are incompatible. Also I should note that these features can be configured from graphical interface, but I will describe how it can be done by simply editing the desktop file.</p>
 
 <h2><a href="#bars" class="anchor" id="bars"><span class="octicon octicon-link"></span></a>Bars</h2>
-<p>Bars are stored in the two directories: <code>/usr/share/apps/plasma_applet_awesome-widget/desktops/</code> and <code>$HOME/.kde4/share/apps/plasma_applet_awesome-widget/desktops/</code> (path may be differ in depend from your distro). Settings in the home directory have a higher priority that global ones. Configuration files have the following fields:</p>
+<p>Bars are stored in the two directories: <code>/usr/share/awesomewidgets/desktops/</code> and <code>$HOME/.local/share/awesomewidgets/desktops/</code> (path may be differ in depend from your distro). Settings in the home directory have a higher priority that global ones. Configuration files have the following fields:</p>
 
 <table>
   <tr>
@@ -77,8 +77,56 @@ description: The paper deals with settings of a custom scripts and graphical bar
   </tr>
 </table>
 
+<h2><a href="#quotes" class="anchor" id="quotes"><span class="octicon octicon-link"></span></a>Quotes</h2>
+<p>Quotes are stored in the two directories: <code>/usr/share/awesomewidgets/quotes/</code> and <code>$HOME/.local/share/awesomewidgets/quotes/</code> (path may be differ in depend from your distro). Settings in the home directory have a higher priority that global ones. Configuration files have the following fields:</p>
+
+<table>
+  <tr>
+    <th>Field</th>
+    <th>Required</th>
+    <th>Value</th>
+    <th>Default</th>
+  </tr>
+  <tr>
+    <th>Name</th>
+    <td>yes</td>
+    <td>quotes name</td>
+    <td>none</td>
+  </tr>
+  <tr>
+    <th>Comment</th>
+    <td>no</td>
+    <td>comment</td>
+    <td>empty</td>
+  </tr>
+  <tr>
+    <th>X-AW-Ticker</th>
+    <td>yes</td>
+    <td>ticker from Yahoo! Finance system</td>
+    <td>EURUSD=X</td>
+  </tr>
+  <tr>
+    <th>X-AW-Active</th>
+    <td>no</td>
+    <td>whether or not the quotes is active</td>
+    <td>true</td>
+  </tr>
+  <tr>
+    <th>X-AW-Interval</th>
+    <td>no</td>
+    <td>update interval in standard widget intervals</td>
+    <td>1</td>
+  </tr>
+  <tr>
+    <th>X-AW-Number</th>
+    <td>yes</td>
+    <td>unique number which will be associated with the script</td>
+    <td>random number which is less than 1000</td>
+  </tr>
+</table>
+
 <h2><a href="#scripts" class="anchor" id="scripts"><span class="octicon octicon-link"></span></a>Scripts</h2>
-<p>Scripts are stored in the two directories: <code>/usr/share/apps/plasma_engine_extsysmon/scripts/</code> and <code>$HOME/.kde4/share/apps/plasma_engine_extsysmon/scripts/</code> (path may be differ in depend from your distro). Settings in the home directory have a higher priority that global ones. To enable script you should type it on the output field. Configuration files have the following fields:</p>
+<p>Scripts are stored in the two directories: <code>/usr/share/awesomewidgets/scripts/</code> and <code>$HOME/.local/share/awesomewidgets/scripts/</code> (path may be differ in depend from your distro). Settings in the home directory have a higher priority that global ones. Configuration files have the following fields:</p>
 
 <table>
   <tr>
@@ -134,5 +182,71 @@ description: The paper deals with settings of a custom scripts and graphical bar
     <td>no</td>
     <td>update interval in standard widget intervals</td>
     <td>1</td>
+  </tr>
+  <tr>
+    <th>X-AW-Number</th>
+    <td>yes</td>
+    <td>unique number which will be associated with the script</td>
+    <td>random number which is less than 1000</td>
+  </tr>
+  <tr>
+    <th>X-AW-Filters</th>
+    <td>no</td>
+    <td>comma separated filters from <code>awesomewidgets-extscripts-filters.json</code></td>
+    <td></td>
+  </tr>
+</table>
+
+<h2><a href="#upgrade" class="anchor" id="upgrade"><span class="octicon octicon-link"></span></a>Upgrade</h2>
+<p>Scripts are stored in the two directories: <code>/usr/share/awesomewidgets/upgrade/</code> and <code>$HOME/.local/share/awesomewidgets/upgrade/</code> (path may be differ in depend from your distro). Settings in the home directory have a higher priority that global ones. Configuration files have the following fields:</p>
+
+<table>
+  <tr>
+    <th>Field</th>
+    <th>Required</th>
+    <th>Value</th>
+    <th>Default</th>
+  </tr>
+  <tr>
+    <th>Name</th>
+    <td>yes</td>
+    <td>upgrade name</td>
+    <td>none</td>
+  </tr>
+  <tr>
+    <th>Comment</th>
+    <td>no</td>
+    <td>comment</td>
+    <td>empty</td>
+  </tr>
+  <tr>
+    <th>Exec</th>
+    <td>yes</td>
+    <td>path to executable file</td>
+    <td>/usr/bin/true</td>
+  </tr>
+  <tr>
+    <th>X-AW-Active</th>
+    <td>no</td>
+    <td>whether or not the upgrade script is active</td>
+    <td>true</td>
+  </tr>
+  <tr>
+    <th>X-AW-Null</th>
+    <td>no</td>
+    <td>the number of lines which should be skipped in output</td>
+    <td>0</td>
+  </tr>
+  <tr>
+    <th>X-AW-Interval</th>
+    <td>no</td>
+    <td>update interval in standard widget intervals</td>
+    <td>1</td>
+  </tr>
+  <tr>
+    <th>X-AW-Number</th>
+    <td>yes</td>
+    <td>unique number which will be associated with the upgrade script</td>
+    <td>random number which is less than 1000</td>
   </tr>
 </table>
